--- a/index.html
+++ b/index.html
@@ -108,22 +108,22 @@
   </noscript>
   
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "PKV GAMES",
-      "alternateName": "PKV GAMES",
-      "url": "https://labelmega888.com",
-      "logo": "https://labelmega888.com//assets/mega888.webp/",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+60132187111",
-        "contactType": "customer service",
-        "areaServed": "ID",
-        "availableLanguage": ["en","Malay"]
-      }
-    }
-    </script>
+         {
+           "@context": "https://schema.org",
+           "@type": "WebSite",
+           "name": "DOYANQQ",
+           "url": "https://ukchic.com/"
+         }
+      </script>
+      <script type="application/ld+json">
+         {
+           "@context": "https://schema.org",
+           "@type": "WebPage",
+           "name": "Pkv Games: Doyanqq Situs Resmi Poker & Dominoqq Online Terlengkap",
+           "url": "https://ukchic.com/",
+           "description": "Pkv Games ialah Doyanqq Situs Resmi Poker & Dominoqq Online Terlengkap Menyediakan Ragam Platform QQ Terpopuler Fair play, deposit termurah dan server stabil."
+         }
+      </script>
   <style amp-custom>
     * {
       box-sizing: border-box
@@ -372,7 +372,7 @@
     <div class="container">
       <div class="footer-text">&copy; Copyright - 2024 <span style="color:#f7f7f7"><strong><a
               href="https://ukchic.com/" title="Platform pkv games Original"
-              rel="nofollow noopener " target="_blank">MEGA888</a>
+              rel="nofollow noopener " target="_blank">PKV GAMES</a>
             <div class="container">Download pkv games New Version 2025</div>
           </strong></span><br>All Rights Reserved</div>
     </div>
